syntax = "proto3";

package memos.store;

option go_package = "gen/store";

message UserSetting {
  int32 user_id = 1;

  UserSettingKey key = 2;

  oneof value {
    AccessTokensUserSetting access_tokens = 3;
    string locale = 4;
    string appearance = 5;
    string memo_visibility = 6;
    bool mark_with_tag = 7;
    bool show_word_cnt = 8;
    string custom_shortcut = 9;
    string fav_tag = 10;
    bool ref_preview = 11;
    bool show_todo_page = 12;
    bool show_archive_page = 13;
    bool paste_rename = 14;
    bool show_tag_selector = 15;
    bool show_memo_public = 16;
    string custom_card_style = 17;
    bool double_click_edit = 18;
    bool use_excalidraw = 19;
    bool hide_mark_block = 20;
    bool hide_full_screen = 21;
    string sys_shortcut_config = 22;
  }
}

enum UserSettingKey {
  USER_SETTING_KEY_UNSPECIFIED = 0;
  USER_SETTING_ACCESS_TOKENS = 1;
  USER_SETTING_LOCALE = 2;
  USER_SETTING_APPEARANCE = 3;
  USER_SETTING_MEMO_VISIBILITY = 4;
  USER_SETTING_MARK_WITH_TAG = 5;
  USER_SETTING_SHOW_WORD_CNT = 6;
  USER_SETTING_CUSTOM_SHORTCUT = 7;
  USER_SETTING_FAV_TAG = 8;
  USER_SETTING_REF_PREVIEW = 9;
  USER_SETTING_SHOW_TODO_PAGE = 10;
  USER_SETTING_SHOW_ARCHIVE_PAGE = 11;
  USER_SETTING_PASTE_RENAME = 12;
  USER_SETTING_SHOW_TAG_SELECTOR = 13;
  USER_SETTING_SHOW_MEMO_PUBLIC = 14;
  USER_SETTING_CUSTOM_CARD_STYLE = 15;
  USER_SETTING_DOUBLE_CLICK_EDIT = 16;
  USER_SETTING_USE_EXCALIDRAW = 17;
  USER_SETTING_HIDE_MARK_BLOCK = 18;
  USER_SETTING_HIDE_FULL_SCREEN = 19;
  USER_SETTING_SYS_SHORTCUT_CONFIG = 20;
}

message AccessTokensUserSetting {
  message AccessToken {
    // The access token is a JWT token.
    // Including expiration time, issuer, etc.
    string access_token = 1;
    // A description for the access token.
    string description = 2;
  }
  repeated AccessToken access_tokens = 1;
}
